pequeño cambio en imagen

--- a/_posts/2020-06-02-GeoQuiz.md
+++ b/_posts/2020-06-02-GeoQuiz.md
@@ -3,7 +3,7 @@ layout: post
 title:  "GeoQuiz Unity game"
 date:   2020-05-30
 excerpt: "A geographic quiz about countries, regions, rivers ..."
-image: "/images/geoquiz_editor.jpg"
+image: "/images/geoquiz.jpg"
 ---
 
 This project is still a work in progress. It is a quiz game with geographic questions which I started as a side project, but it became bigger than I though. From this project I derived to the Simple TableUI plugin, because I needed a scoreboard.
